erDiagram
    Reference {
      ID id
      String name
      String phone
      String email
      ID contactinformationID
    }
    ContactInformation {
      ID id
      String name
      String email
      String phone
    }
    Resume {
      ID id
      String title
    }
    Education {
      ID id
      String summary
    }
    Degree {
      ID id
      String major
      AWSDate startYear
      AWSDate endYear
      ID schoolID
    }
    Company {
      ID id
      String name
      String role
      AWSDate startDate
      AWSDate endDate
      ID historyID
      String title
      String gptResponse
    }
    Accomplishment {
      ID id
      String title
      String description
      String link
      ID engagementID
      ID companyID
    }
    School {
      ID id
      String name
      ID educationID
    }
    Experience {
      ID id
      String title
      String text
      String gptResponse
    }
    Skill {
      ID id
      String title
      String link
      ID resumeID
      ID companyID
      ID accomplishmentID
    }
    Engagement {
      ID id
      String client
      AWSDate startDate
      AWSDate endDate
      ID companyID
      String gptResponse
    }
    Summary {
      ID id
      String goals
      String persona
      String url
      String headshot
      String gptResponse
    }

    Reference ||--|{ ContactInformation : belongs_to
    ContactInformation ||--o{ Reference : has_many
    Resume ||--o| Summary : has_one
    Resume ||--o{ Skill : has_many
    Resume ||--o| Education : has_one
    Resume ||--o| Experience : has_one
    Resume ||--o| ContactInformation : has_one
    Education ||--o{ School : has_many
    School ||--o{ Degree : has_many
    Degree ||--|| School : belongs_to
    Experience ||--o{ Company : has_many
    Company ||--o{ Engagement : has_many
    Company ||--o{ Accomplishment : has_many
    Company ||--o{ Skill : has_many
    Accomplishment ||--o{ Skill : has_many
    Accomplishment ||--|| Company : belongs_to
    Accomplishment ||--|| Engagement : belongs_to
    Engagement ||--o{ Accomplishment : has_many
    Engagement ||--|| Company : belongs_to
    Skill ||--|| Resume : belongs_to
    Skill ||--|| Company : belongs_to
    Skill ||--|| Accomplishment : belongs_to
